<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Nitro Lab</string>

    <!-- This for Splash activity -->
    <string name="Splash_Text">By MOHAMED ABAZA &amp; ABDULLAH SAMIR</string>

    <!-- This for AcademicYear activity -->
    <string name="firstYear">first Year</string>
    <string name="secondYear">second Year</string>
    <string name="thirdYear">third Year</string>
    <string name="fourthYear">fourth Year</string>
    <string name="aboutUs">About Us</string>
    <string name="NoInternet">NO INTERNET! PLEASE CHECK YOUR CONNECTION AND TOUCH HERE TO RETRY</string>
    <string name="first_term">First Term</string>
    <string name="second_term">Second Term</string>

    <!-- This for ThirdYear activity -->
    <string name="FirstExperiment">Band Pass Filter</string>
    <string name="ExperimentTitle">Experiment Title</string>
    <string name="exp_pdf">PDF</string>
    <string name="exp_video">Video</string>
    <string name="exp_Lab">Lab</string>

    <!-- This for Experiment and ExperimentTable activity -->
    <string name="VoltResult">Get Voltage</string>
    <string name="nextPage">Next</string>
    <string name="OutputVoltage">Output Voltage</string>
    <string name="Voltage">Voltage</string>
    <string name="Frequency">Frequency(Hz)</string>
    <string name="LogFreq">Log(Hz)</string>
    <string name="Gain">Gain</string>
    <string name="Zero_hint">0</string>
    <string name="DotZero_hint">0.0</string>
    <string name="Hit_Text">Use This Value For Hz :</string>
    <string name="Result">Result</string>

    <!-- This for AboutUS activity -->
    <string name="instgram_account">- Instgram Account</string>
    <string name="facebook_account">- Facebook Account</string>
    <string name="abaza_career">- Android Developer</string>
    <string name="abaza_name">- Mohamed Abaza</string>
    <string name="abdullah_career">- Physicist</string>
    <string name="abdullah_name">- Abdullah Samir</string>
    <string name="abaza_gmail">- Email:
        abaza.jobs@Gmail.com</string>
    <string name="Abdullah_whatsapp">- WhatsApp: 01092629610</string>

    <!-- This for SupportUs activity -->
    <string name="support_us">Support Us</string>
    <string name="why_we_need_support">Why we need Support ?</string>

    <string name="supportWays">Money Help us to keep going and develop the app by buying a faster server and
    now you can support us by watching a short Video Ad:</string>

    <string name="watchAdVideoText">- The First one by watching a short Ad :</string>
    <string name="watchAdVideoBtn">Click to watch short video ad</string>


    <string name="available_soon">Available Soon</string>
    <string name="t_celsius" tools:ignore="TypographyOther">Temp.(c)</string>
    <string name="t_kelvin">Temp.(k)</string>
    <string name="reverseKelvin">1 /T(k)</string>
    <string name="resistance">Resistance</string>
    <string name="ln_r">Ln(R)</string>
    <string name="base_current">Base Current</string>
    <string name="collector_current">Collector Current</string>
    <string name="add_result">Add Result</string>
    <string name="distance_d">Distance(d)</string>
    <string name="current_i">Current(I)</string>


</resources>
