<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1F5FE"
    tools:context=".ThirdYearExperiments.NTC2">

    <Button
        android:id="@+id/btn_getResults"
        android:layout_width="105dp"
        android:layout_height="34dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:text="@string/Result"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/ed_tCelsius"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp" />

    <EditText
        android:id="@+id/ed_tCelsius"
        android:layout_width="165dp"
        android:layout_height="34dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:background="@drawable/rowneditem"
        android:gravity="center"
        android:hint="@string/t_celsius"
        android:inputType="number"
        android:textColor="#000"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_getResults"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,MissingConstraints" />


    <TextView
        android:id="@+id/txt_celsius"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/t_celsius"
        android:textColor="#000"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/txt_kelvin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_tCelsius"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txt_kelvin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/t_kelvin"
        android:textColor="#000"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/txt_reverseKelvin"
        app:layout_constraintStart_toEndOf="@+id/txt_celsius"
        app:layout_constraintTop_toBottomOf="@+id/ed_tCelsius"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txt_reverseKelvin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/reverseKelvin"
        android:textColor="#000"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/txt_resistance"
        app:layout_constraintStart_toEndOf="@+id/txt_kelvin"
        app:layout_constraintTop_toBottomOf="@+id/ed_tCelsius"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txt_resistance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/resistance"
        android:textColor="#000"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/txt_logResistance"
        app:layout_constraintStart_toEndOf="@+id/txt_reverseKelvin"
        app:layout_constraintTop_toBottomOf="@+id/ed_tCelsius"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txt_logResistance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/ln_r"
        android:textColor="#000"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_resistance"
        app:layout_constraintTop_toBottomOf="@+id/ed_tCelsius"
        tools:ignore="MissingConstraints" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ntcRecycleView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:drawSelectorOnTop="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/chart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_celsius" />


    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="0dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>