<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1F5FE"
    android:orientation="vertical"
    tools:context=".FourthYearExperiments.BondPassChart">


    <Button
        android:id="@+id/btn_getResults"
        android:layout_width="105dp"
        android:layout_height="44dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/Result"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/ed_Frequency"
        app:layout_constraintTop_toBottomOf="@+id/listHint"
        tools:ignore="SmallSp" />

    <EditText
        android:id="@+id/ed_Frequency"
        android:layout_width="165dp"
        android:layout_height="34dp"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@drawable/rowneditem"
        android:gravity="center"
        android:hint="@string/Frequency"
        android:inputType="number"
        android:textColor="#000"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_getResults"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listHint"
        tools:ignore="Autofill,MissingConstraints" />


    <TextView
        android:id="@+id/txtFreq"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/Frequency"
        android:textColor="#000"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/txtVolt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_Frequency"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtVolt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/Voltage"
        android:textColor="#000"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/txtGain"
        app:layout_constraintStart_toEndOf="@+id/txtFreq"
        app:layout_constraintTop_toBottomOf="@+id/ed_Frequency"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtGain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/Gain"
        android:textColor="#000"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/txtLog"
        app:layout_constraintStart_toEndOf="@+id/txtVolt"
        app:layout_constraintTop_toBottomOf="@+id/ed_Frequency"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtLog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/LogFreq"
        android:textColor="#000"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtGain"
        app:layout_constraintTop_toBottomOf="@+id/ed_Frequency"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Hit_Text"
        android:textColor="#000"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:drawSelectorOnTop="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/chart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVolt" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listHint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:drawSelectorOnTop="true"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="0dp"
        android:layout_height="235dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>